samples/_failures_safe/1761448090_9916d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ba86cc4.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_6ba86cc4.c:116:5: error: expected expression at end of input
  116 |     if (!
      |     ^~
./samples/SAFE/__tmp_6ba86cc4.c:116:5: error: expected declaration or statement at end of input
